--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-player": "^2.11.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-youtube": "^10.1.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.0"
   },
